# OpenSCvx

./: .gitignore  CONTRIBUTING.md  README.md  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  versions.json
.github/: release-drafter.yml
.github/workflows/: _build.yml  _check_changes.yml  _docs-check.yml  _docs.yml  _lint.yml  _test.yml  ci.yml  documentation.yml  integration.yml  lint.yml  nightly.yml  release-drafter.yml  release.yml  website.yml
docs/: citation.md  getting-started.md  index.md
docs/Overview/: constraint_reformulation.md  control_parameterization.md  discretization.md  ocp.md  ptr.md  scvx.md  time_dilation.md
docs/UnderTheHood/: lowering_architecture.md  vectorization_and_vmapping.md
docs/Usage/: advanced_problem_setup.md  api.md  api_constraints.md  api_control.md  api_state.md  api_variable.md  basic_api.md  basic_problem_setup.md  tutorial_6dof_los_guidance.md  tutorial_6dof_obstacle_avoidance.md  tutorials.md  vectorization_and_vmapping.md
examples/: drone_racing_realtime.py  dubins_car_realtime.py  inter_node_constraints.py  main.py  obstacle_avoidance_realtime.py  plotting.py  plotting_viser.py
examples/abstract/: 3DoF_pdg.py  3DoF_pdg_fixed.py  brachistochrone.py  brachistochrone_monolithic.py  brachistochrone_rate_limit.py
examples/arm/: three_link_arm.py
examples/aviation/: bryson_time_to_climb.py
examples/car/: dubins_car.py  dubins_car_alt_propagation.py  dubins_car_conditional.py  dubins_car_disjoint.py  dubins_car_over.py  dubins_car_stljax.py
examples/double_integrator/: dr_double_integrator.py
examples/drone/: cinema_vp.py  cinema_vp_realtime_base.py  dr_double_integrator.py  dr_vp.py  dr_vp_nodal.py  dr_vp_polytope.py  drone_racing.py  obstacle_avoidance.py  obstacle_avoidance_nodal.py  obstacle_avoidance_realtime_base.py  obstacle_avoidance_realtime_test.py  obstacle_avoidance_vmap.py
examples/dubins_car/: dubins_car.py  dubins_car_disjoint.py  dubins_car_stljax.py
examples/params/: 3DoF_pdg.py  brachistochrone.py  cinema_vp.py  dr_double_integrator.py  dr_vp.py  dr_vp_nodal.py  dr_vp_polytope.py  drone_racing.py  (+6 more)
nightly/: 404.html  index.html  objects.inv  sitemap.xml
openscvx/: __init__.py  _version.py  augmentation.py  autotuning.py  caching.py  config.py  discretization.py  dynamics.py  integrators.py  io.py  linalg.py  ocp.py  plotting.py  post_processing.py  problem.py  propagation.py  ptr.py  results.py  solver_state.py  stl.py  time.py  trajoptproblem.py  utils.py
results/: animation.html  scp_animation.html
scripts/: gen_example_pages.py  gen_ref_pages.py
stylesheets/: extra.css
tests/: brachistochrone_analytical.py  test_brachistochrone.py  test_ctcs_sorting.py  test_ctcs_violation.py  test_cvxpygen_optional.py  test_discretization.py  test_dynamics_augmentation.py  test_examples.py  test_expert.py  test_init.py  test_integrators.py  test_plotting.py  test_propagation.py  test_pyqtgraph_functions.py  test_pyqtgraph_helpers.py  test_variables.py
v0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.1/: 404.html  index.html  sitemap.xml
(+513 files in other folders)
