[metadata]
name = openscvx
use_scm_version = True
author = Chris Hayner and Griffin Norris
author_email = haynec@uw.edu
description = Short description of openscvx
long_description = file: README.md
long_description_content_type = text/markdown
url = https://haynec.github.io/openscvx/
license = Apache Software License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License

[options]
python_requires = >=3.9
install_requires =
    cvxpy
    cvxpygen
    qoco
    qocogen
    numpy
    jax
    plotly
    termcolor
    diffrax
# Point setuptools at your “src” folder:
package_dir =
    = openscvx
packages = find:

[options.packages.find]
# only look for packages under that folder
where = openscvx
exclude =
    tests*
    examples*
    figures*
